<resources>
    <string name="app_name">AndroidTAMAS</string>
    <string name="action_settings">Settings</string>
    <string name="login_hint_identification_number">9-digit ID</string>
    <string name="login_button_login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="register_button">New Users</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="applicant_name_hint">First and Last Name</string>
    <string name="applicant_identification_hint">9-digit ID</string>
    <string name="applicant_cpga_hint">CGPA</string>
    <string name="applicant_skills_hint">Relevant Skills</string>
    <string name="logout">Logout</string>
    <string name="title_activity_application">ApplicationActivity</string>
    <string name="application_spinner_prompt">Available Jobs</string>
    <string name="application_coursegpa_hint">CourseGPA</string>
    <string name="application_courseexperience_hint">Relevant Experience</string>
    <string name="apply_button">Apply</string>
    <string name="login_button_create_user">create new user</string>
    <string name="graduate_student">Graduate Student</string>
    <string name="under_graduate_student">Undergraduate Student</string>
    <string name="application_reqcourseexperience_hint">Required Experience</string>
    <string name="main_buttonlabel_view_job_postings">view job postings</string>
    <string name="title_activity_view_jobs">ViewJobsActivity</string>
    <string name="apply_button_complete">Finish Application</string>
    <string name="job_name">Jobs</string>
    <string name="title_activity_login_">Login_Activity</string>
    <string name="required_gpa_header">Course GPA</string>
    <string name="required_cgpa_header">Required CGPA</string>
    <string name="main_buttonlabel_view_current_applications">current applications</string>
    <string name="main_buttonlabel_view_ongoing_jobs">ongoing jobs</string>
    <string name="main_buttonlabel_edit_profile">edit profile</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="edit_profile_radiobuttonlabel_graduate_student">Graduate Student</string>
    <string name="edit_profile_radiobuttonlabel_under_graduate_student">Undergraduate Student</string>
    <string name="edit_profile_hint_name">Full Name</string>
    <string name="edit_profile_hint_identification_number">Identification Number</string>
    <string name="edit_profile_hint_applicant_cgpa">Cumulative GPA</string>
    <string name="edit_profile_buttonlabel_update_profile">update profile</string>
    <string name="edit_profile_buttonlabel_delete_profile">delete</string>
    <string name="register_buttonlabel_register">register</string>
    <string name="register_radiobuttonlabel_undergraduate_student">Undergraduate Student</string>
    <string name="register_radiobuttonlabel_graduate_student">Graduate Student</string>
    <string name="register_hint_applicant_identification">Identification Number</string>
    <string name="register_hint_applicant_name_hint">Full Name</string>
    <string name="register_hint_cgpa">CGPA</string>
    <string name="title_activity_current_application">CurrentApplicationActivity</string>
    <string name="current_application_hint_job_pending_description">Course - Job</string>
    <string name="current_application_buttonlabel_pending_firstjob">edit</string>
    <string name="current_application_hint_job_reviewed_description">Course - Job</string>
    <string name="current_application_buttonlabel_pending_job">edit</string>
    <string name="current_application_buttonlabel_reviewed_status">status</string>
    <string name="current_application_textview_label_pending">Pending </string>
    <string name="title_activity_edit_application">EditApplicationActivity</string>
    <string name="application_hint_coursegpa">Course GPA</string>
    <string name="application_hint_relevantexperience">Relevant Experience</string>
    <string name="application_buttonlabel_finishapplication">finish application</string>
    <string name="edit_application_courseexperience_hint">Relevant Experience</string>
    <string name="edit_application_updateapplication">update application</string>
    <string name="title_activity_current_job">CurrentJobActivity</string>
    <string name="current_job_spinnerlabel">Job</string>
    <string name="current_job_buttonlabel_done">done</string>
    <string name="title_activity_application_status">ApplicationStatusActivity</string>
    <string name="view_job_apply_button">apply</string>
    <string name="view_job_job_name">Job</string>
    <string name="view_job_required_gpa_header">Course GPA Required</string>
    <string name="view_job_required_cgpa_header">Required CGPA</string>
    <string name="title_activity_view_job_status">ViewJobStatusActivity</string>
    <string name="job_status_accepted_button_confirm">Confirm</string>
    <string name="job_status_radiobuttonlabel_confirm">Accept</string>
    <string name="job_status_radiobuttonlabel_decline">Decline</string>
    <string name="job_status_rejected_button_confirm">Return</string>
    <string name="login_buttonlabel_login">login</string>
    <string name="login_edittext_hint_identification">Identification Number</string>
    <string name="login_buttonlabel_create_user">Create New User</string>
    <string name="register_applicant_skills_hint">Relevant Skills</string>
    <string name="fragment_edit_profile_tv_deletion_confirmation">Proceeding with this action will remove your profile and all associated data. Do you wish to proceed?</string>
    <string name="fragment_edit_profile_delete">DELETE</string>
    <string name="fragment_edit_profile_cancel">CANCEL</string>
    <string name="fragment_edit_profile_title">WARNING</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_current_applications_buttonlabel_edit">EDIT</string>
    <string name="fragment_current_applications_tv_pending">Pending</string>
    <string name="current_application_buttonlabel_return">done</string>
    <string name="fragment_current_applications_decisions_buttonlabel_edit">View Decision</string>
    <string name="fragment_current_applications_decisions_buttonlabel_decision">View Decision</string>
    <string name="current_application_tv_no_applications_text">There are no applications to view!</string>
    <string name="edit_application_deleteapplication">Delete</string>
    <string name="condolences_message">Your application was considered, but ultimately we went with another candidate. Leaving this page will delete your application.</string>
</resources>
