<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="170dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ecse321.group12.tamas.androidtamas.HomeActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_buttonlabel_view_job_postings"
        android:onClick="PLACEHOLDER"
        android:id="@+id/main_button_job_postings"
       />
    <Button
        android:layout_below="@id/main_button_job_postings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_buttonlabel_view_current_applications"
        android:onClick="PLACEHOLDER"
        android:id="@+id/main_button_current_applications"
        />
    <Button
        android:layout_below="@id/main_button_current_applications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_buttonlabel_view_ongoing_jobs"
        android:onClick="PLACEHOLDER"
        android:id="@+id/main_button_ongoing_jobs"
        />

    <Button
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_buttonlabel_edit_profile"
        android:onClick="PLACEHOLDER"
        android:id="@+id/main_button_edit_profile"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_above="@id/main_button_edit_profile"
        android:id="@+id/main_graphical_bottom_divider"
        />

</RelativeLayout>
