<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ecse321.group12.tamas.androidtamas.EditProfileActivity"
    tools:showIn="@layout/activity_edit_profile">

    <TextView
        android:id="@+id/edit_profile_immutable_name"
        android:inputType="none"
        android:textIsSelectable="false"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:ems="10"
        >
    <requestFocus />
    </TextView>
    <TextView
        android:id="@+id/edit_profile_immutable_identification_number"
        android:inputType="none"
        android:textIsSelectable="false"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@id/edit_profile_immutable_name"
        android:textSize="24sp"
        android:ems="10"
        >
        <requestFocus />
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_profile_immutable_identification_number"
        android:gravity="center_horizontal"
        android:id="@+id/edit_profile_mutable_applicant_cgpa"
        android:textSize="24sp"
        android:ems="10"
        android:inputType="none"
        android:textIsSelectable="true"
        android:hint="@string/edit_profile_hint_applicant_cgpa"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_profile_radiobutton_student_type_group"
        android:layout_below="@id/edit_profile_mutable_applicant_cgpa"
        android:orientation="horizontal"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_radiobuttonlabel_graduate_student"
            android:id="@+id/edit_profile_radiobutton_graduate_student"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_radiobuttonlabel_under_graduate_student"
            android:id="@+id/edit_profile_radiobutton_undergraduate_student"
            />
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/edit_profile_group_buttons"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_buttonlabel_update_profile"
            android:onClick="modifyApplicant"
            android:id="@+id/edit_profile_button_update_profile"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_buttonlabel_delete_profile"
            android:id="@+id/edit_profile_button_delete_profile"
             />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_profile_radiobutton_student_type_group"
        android:layout_above="@id/edit_profile_graphical_divider"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/edit_profile_mutable_applicant_skills"
            android:hint="@string/applicant_skills_hint"
            />
    </ScrollView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_above="@id/edit_profile_group_buttons"
        android:id="@+id/edit_profile_graphical_divider"
        />
</RelativeLayout>
