<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_edit_application"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ecse321.group12.tamas.androidtamas.EditApplicationActivity"
    tools:showIn="@layout/activity_edit_application">


    <TextView
        android:id="@+id/edit_application_immutable_job_title"
        android:inputType="none"
        android:textIsSelectable="false"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:ems="10"
        android:layout_alignParentTop="true"
        >
        <requestFocus />
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/application_coursegpa_hint"
        android:gravity="center_horizontal"
        android:id="@+id/edit_application_et_immutable_coursegpa"
        android:layout_below="@id/edit_application_immutable_job_title"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/edit_application_et_immutable_coursegpa"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_application_et_immutable_coursegpa"
        android:layout_above="@id/bottom_divider"
        android:id="@+id/edit_application_relevantexperience_group"

        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_application_courseexperience_hint"
            android:gravity="center_horizontal"
            android:id="@+id/edit_application_et_mutable_courseexperience"
            android:paddingTop="12dp"
            />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_application_buttongroup"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_application_updateapplication"
            android:onClick="modifyApplication"
            android:id="@+id/edit_application_button_complete_application"

            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_application_deleteapplication"
            android:id="@+id/edit_application_button_delete_application"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_above="@id/edit_application_buttongroup"
        android:id="@+id/bottom_divider"
        />
</RelativeLayout>
