<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_view_jobs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ecse321.group12.tamas.androidtamas.ViewJobsActivity"
    tools:showIn="@layout/activity_view_jobs">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/view_job_spinner_group"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_job_job_name"
        />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_job_job_spinner"
        >
    </Spinner>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_job_spinner_group"
        android:id="@+id/view_job_required_gpa_group"
        >
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_job_required_gpa_header"

        />
        <TextView
            android:id="@+id/view_job_required_gpa"
            android:inputType="none"
            android:textIsSelectable="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textAlignment="center"

            >
            <requestFocus />
        </TextView>
    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_job_required_gpa_group"
        android:id="@+id/view_job_required_cgpa_group"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_job_required_cgpa_header"
            />
        <TextView
            android:id="@+id/view_job_required_cgpa"
            android:inputType="none"
            android:textIsSelectable="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"

            android:textAlignment="center"
            >
            <requestFocus />
        </TextView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_centerInParent="true"
        android:id="@+id/view_job_middle_divider"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_job_apply_button"
        android:id="@+id/view_job_button_apply"
        android:layout_alignParentBottom="true"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_above="@id/view_job_button_apply"
        android:id="@+id/view_job_bottom_divider"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_job_middle_divider"
        android:layout_above="@id/view_job_bottom_divider"
        android:id="@+id/view_job_required_skills_group"
        >
        <TextView
            android:id="@+id/view_job_required_skills"
            android:inputType="none"
            android:textIsSelectable="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp"

            >
            <requestFocus />
        </TextView>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view_job_required_experience_group"
        android:layout_below="@+id/view_job_required_cgpa_group"
        android:layout_above="@id/view_job_middle_divider">

        <TextView
            android:id="@+id/view_job_required_experience"
            android:inputType="none"
            android:textAlignment="center"
            android:textIsSelectable="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            >
            <requestFocus />
        </TextView>
    </ScrollView>
</RelativeLayout>
